# ligny

./: Cargo.toml  flake.nix
0_content/: 1_hallo.md  index.md
0_content/0_test/: index.md
src/: config.rs  errors.rs  init.rs  link_checker.rs  locator.rs  main.rs  notify.rs  reader.rs  render.rs  search.rs  serve.rs  templates.rs  watcher.rs
static/: base.css  search.js
templates/: base.html  content_table.html
