[package]
name = "ligny"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.13.1"
dotenvy = "0.15.7"
hyper = "1.6.0"
notify = "8.0.0"
thiserror = "2.0.12"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio = {version = "1.46.0", features = ["macros", "rt-multi-thread"]}
markdown-ppp = "2.0.1"
