[package]
name = "ligny"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.1"
dotenvy = "0.15.7"
hyper = {version = "1.6.0", features = ["server", "http1"]}
notify = "8.0.0"
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["tokio"]}
tokio = {version = "1.46.0", features = ["macros", "rt-multi-thread"]}
markdown-ppp = "2.0.1"
notify-debouncer-full = "0.5.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
color-print = "0.3.7"
futures-util = { version = "0.3", default-features = false}
tokio-stream = {version = "0.1.17", default-features = false ,features = ["sync"]}
include_dir = "0.7.4"
